objects/advpm__Advologix_At_a_Glance_Charts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Is_Standard_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standard Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Record_Type_Id__c</fullName>
        <label>Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Report_Filter_Column__c</fullName>
        <label>Report Filter Column</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Report_Id__c</fullName>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Advologix At a Glance Charts</label>
</CustomObject>